# loopian_qubit_rust

./: .gitignore  Cargo.toml  readme.md
.cargo/: config.toml
.github/workflows/: ci_checks.yml
ref/: main.cpp  peripheral.cpp  peripheral.h
src/: constants.rs  main.rs  oled_demo.rs
src/bus/: i2c.rs
src/devices/: at42qt.rs  mod.rs  pca9544.rs  ssd1306.rs  ws2812.rs
src/gen_ev/: mod.rs  qtouch.rs  read_touch.rs
src/touch/: mod.rs  qtouch.rs  read_touch.rs
src/ui/: mod.rs  oled_demo.rs  oled_display.rs
