[package]
edition = "2024"
name = "pico_template"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy.git", branch = "main", features = ["defmt"] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", branch = "main", features = ["defmt"] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", branch = "main", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", branch = "main", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { git = "https://github.com/embassy-rs/embassy.git", branch = "main", default-features = false, features = ["defmt", "time-driver", "critical-section-impl", "rp235xa", "binary-info"] }
embassy-usb = { git = "https://github.com/embassy-rs/embassy.git", branch = "main", features = ["defmt"] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", branch = "main" }

defmt = "1.0.1"
defmt-rtt = "1.0.0"
fixed = "1.23.1"
fixed-macro = "1.2"

serde = { version = "1.0.203", default-features = false, features = ["derive"] }
serde-json-core = "0.5.1"

# for assign resources example
assign-resources = { git = "https://github.com/adamgreig/assign-resources", rev = "bd22cb7a92031fb16f74a5da42469d466c33383e" }

# for TB6612FNG example
tb6612fng = "1.0.0"

#cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
display-interface-spi = "0.5.0"
display-interface-i2c = "0.5.0"
embedded-graphics = "0.8.1"
ssd1306 = "0.10.0"
mipidsi = "0.8.0"
display-interface = "0.5.0"
byte-slice-cast = { version = "1.2.0", default-features = false }
smart-leds = "0.4.0"
heapless = "0.9"
usbd-hid = "0.9.0"

embedded-hal = "1.0"
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.2", features = ["async"] }
embedded-io-async = { version = "0.7.0", features = ["defmt"] }
embedded-storage = { version = "0.3" }
static_cell = "2.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }
log = "0.4"
embedded-sdmmc = "0.7.0"

#[profile.release]
# Enable generation of debug symbols even on release builds
#debug = true

# If you're not going to use a Board Support Package you'll need these:
rp235x-hal = { version = "0.3", features = [
  "binary-info",
] }

[package.metadata.embassy]
build = [
  { target = "thumbv8m.main-none-eabihf", artifact-dir = "out/rp235x" }
]

# cargo build/run
[profile.dev]
debug = 2
debug-assertions = true
opt-level = 2
overflow-checks = true

# cargo build/run --release
[profile.release]
debug = 2
debug-assertions = false
# lto = 'fat'
opt-level = 2
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
debug = false
debug-assertions = false
overflow-checks = false
opt-level = 0

[profile.release.build-override]
debug = false
debug-assertions = false
overflow-checks = false
opt-level = 0

# cargo test
[profile.test]
debug = 2
debug-assertions = true
opt-level = 2
overflow-checks = true

# cargo test --release
[profile.bench]
debug = 2
debug-assertions = false
# lto = 'fat'
opt-level = 3
